--- a/locale/en/blog/release/v4.2.2.md
+++ b/locale/en/blog/release/v4.2.2.md
@@ -113,7 +113,7 @@ Linux 32-bit Binary: https://nodejs.org/dist/v4.2.2/node-v4.2.2-linux-x86.tar.gz
 Linux 64-bit Binary: https://nodejs.org/dist/v4.2.2/node-v4.2.2-linux-x64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v4.2.2/node-v4.2.2-sunos-x86.tar.gz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v4.2.2/node-v4.2.2-sunos-x64.tar.gz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/download/release/latest-v4.x/node-v4.2.2-linux-armv6l.tar.gz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v4.2.2/node-v4.2.2-linux-armv7l.tar.gz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v4.2.2/node-v4.2.2-linux-arm64.tar.gz<br>
 Source Code: https://nodejs.org/dist/v4.2.2/node-v4.2.2.tar.gz<br>
@@ -122,12 +122,17 @@ Documentation: https://nodejs.org/docs/v4.2.2/api/
 
 Shasums (GPG signing hash: SHA512, file hash: SHA256):
 ```
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 17e60f59cfd40bd0a74f62106dfe2d6cf14aea53490c5e872fa7530138d0dfef  node-v4.2.2-darwin-x64.tar.gz
 949fe7a06e097e1f1b15196020e4c0ef5f132b146b000811e59513de9d22a9ef  node-v4.2.2-darwin-x64.tar.xz
 787a89963b9b0ea41f7d4964705ed3561d16d023e1b5aae80700f973ba7ec4e7  node-v4.2.2-headers.tar.gz
 663c5a6fdc2c6abab7e8e528299f414a75b544d775c43aef2303272c8a3560bf  node-v4.2.2-headers.tar.xz
 125b2236da6c0c7fed39b6652b3867646200c3fe7c9284df3f8ac07a84d39010  node-v4.2.2-linux-arm64.tar.gz
 d51b08a018f91440658b077c7ea92296516208f008df66cebfc882086be9e2b0  node-v4.2.2-linux-arm64.tar.xz
+dfe30ab4dbfb66c31259c0b176609f2dbace29f03d3cf12c5d8bee3dd25db035  node-v4.2.2-linux-armv6l.tar.gz
+35015424950ec585f4c4f882f0433bd2b64111020c59075d4de19b34d1990a97  node-v4.2.2-linux-armv6l.tar.xz
 2170dea2d74b6a1c5c82be6b93a9b84ad5a78cafa47415661095be2b358d964a  node-v4.2.2-linux-armv7l.tar.gz
 7ce4aa955d98a1023b13c11175a8381db78fac0ea91d69ad9ec48f7f16993eec  node-v4.2.2-linux-armv7l.tar.xz
 5c39fac55c945be3b8ac381a12bdbe3a64a9bdc5376d27e2ce0c72160eff5942  node-v4.2.2-linux-x64.tar.gz
@@ -147,4 +152,15 @@ aee3b5506adcef036b5db4d2cbc978fe4de5786cdd4803fc65305482904c26fe  node-v4.2.2-x6
 e73cbd09bac9338df5f5aea804358e36ae33af1a1664f1d9c6d6161801e3147c  win-x64/node.lib
 ca722e26b0edc14043085e1a7794b1281b4cfacd11ae00a96d9009e97d8ecb0b  win-x86/node.exe
 238388ba03873b40988e37a5f83867f9fb6dbe51a1c9f85e5fc371f555a3f648  win-x86/node.lib
+-----BEGIN PGP SIGNATURE-----
+Comment: GPGTools - https://gpgtools.org
+
+iQEcBAEBCgAGBQJWORyQAAoJEHNBsVwHCHesJfMH/19SGfkAjguPYgfprKyG32jZ
+rE9slmg0pz+VGEJCv+yepgvRBHfu0w9sxZ/TjBHg2ioh4ZgWNoLrZcTNmYvaqY/K
+ifyLeoDcOSoXbYmqw8vZvKbGTpS7p10Bi9cNfr49YiE814RbdRulIDqKlcymxYIt
+vecnX+X/ZiFBipIDmak1n582dikmFe5gPvwx5vCydKCo89l7Ja7XCLy484cEkQo/
+aRHI0dnjwcC7+/EBXBhpGAM42ls4AcN5FtuUKgpUT609rcH0Z4SwKW3CShU3nDO1
+IecVUMtE1G8uy4dmCFozpA2IXzGSoNSGIEWYAWNDbc8JtPMRyBhcBOUDox2utjY=
+=0leN
+-----END PGP SIGNATURE-----
 ```
