List of current board directors and information about a new post about the individual membership class.

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -86,6 +86,10 @@
             "link": "foundation/members",
             "text": "Members"
         },
+        "board": {
+            "link": "foundation/board",
+            "text": "Board"
+        },
         "tsc": {
             "link": "foundation/tsc",
             "text": "Technical Governance"
