Add guides to docs

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -74,6 +74,10 @@
             "link": "/api/",
             "text": "API"
         },
+        "guides": {
+            "link": "docs/guides",
+            "text": "Guides"
+        },
         "knowledge": {
             "link": "knowledge",
             "text": "Knowledge Base"
