Add link to Code of Conduct from contributing section

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -121,6 +121,9 @@
         "events": {
           "link": "get-involved/events",
           "text": "Events"
+        },
+        "conduct": {
+            "text": "Conduct"
         }
     },
     "trademark"  : { "link": "about/trademark", "text": "Trademark" },
