Add link to help repo
The nodejs/node repo has been getting a lot of help related issues and
it would be nice if there was a link to the help repo.

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -6,6 +6,7 @@
     "scrollToTop": "Scroll to top",
     "reportNodeIssue": "Report Node.js issue",
     "reportWebsiteIssue": "Report website issue",
+    "getHelpIssue": "Get Help",
     "by": "by",
     "all-downloads": "All download options",
     "feeds": [
