Fix invalid JSON format in Italian site.json

--- a/locale/it/site.json
+++ b/locale/it/site.json
@@ -3,7 +3,7 @@
     "author": "Node.js Foundation",
     "url": "https://nodejs.org/en/",
     "locale": "it",
-    "scrollToTop": "Portami all\'inizio",
+    "scrollToTop": "Portami all'inizio",
     "reportNodeIssue": "Segnala un problema di Node.js",
     "reportWebsiteIssue": "Segnala un problema del sito",
     "by": "da",
