--- a/locale/it/site.json
+++ b/locale/it/site.json
@@ -6,6 +6,7 @@
     "scrollToTop": "Portami all'inizio",
     "reportNodeIssue": "Segnala un problema di Node.js",
     "reportWebsiteIssue": "Segnala un problema del sito",
+    "getHelpIssue": "Chiedi aiuto",
     "by": "da",
     "all-downloads": "Tutti i download",
     "feeds": [
@@ -74,6 +75,10 @@
             "link": "/api/",
             "text": "API"
         },
+        "guides": {
+            "link": "docs/guides",
+            "text": "Guide"
+        },
         "knowledge": {
             "link": "knowledge",
             "text": "Knowledge"
@@ -85,6 +90,10 @@
         "members": {
             "link": "foundation/members",
             "text": "Membri"
+        },
+        "board": {
+            "link": "foundation/board",
+            "text": "Amministrazione"
         },
         "tsc": {
             "link": "foundation/tsc",
@@ -117,12 +126,14 @@
         "events": {
           "link": "get-involved/events",
           "text": "Eventi"
+        },
+        "conduct": {
+            "text": "Condotta"
         }
     },
     "trademark"  : { "link": "about/trademark", "text": "Marchio Registrato" },
     "security"   : { "link": "security",        "text": "Sicurezza" },
     "blog"       : { "link": "blog",            "text": "Blog" },
-
     "releases": {
         "title": "Cronologia delle Release",
         "downloads": "Download"
