--- a/locale/en/blog/release/v0.12.11.md
+++ b/locale/en/blog/release/v0.12.11.md
@@ -13,7 +13,7 @@ This release contains security updates. OpenSSL 1.0.1s fixes some low-severity d
 ### Notable changes:
 
 * **http_parser**: Update to http-parser 2.3.2 to fix an unintentionally strict limitation of allowable header characters. (James M Snell) [nodejs/node#5241](https://github.com/nodejs/node/pull/5241)
-* domains:
+* **domains**:
   - Prevent an exit due to an exception being thrown rather than emitting an 'uncaughtException' event on the `process` object when no error handler is set on the domain within which an error is thrown and an 'uncaughtException' event listener is set on `process`. (Julien Gilli) [nodejs/node#3885](https://github.com/nodejs/node/pull/3885)
   - Fix an issue where the process would not abort in the proper function call if an error is thrown within a domain with no error handler and `--abort-on-uncaught-exception` is used. (Julien Gilli) [nodejs/node#3885](https://github.com/nodejs/node/pull/3885)
 * **openssl**: Upgrade from 1.0.2f to 1.0.2g (Ben Noordhuis) [nodejs/node#5509](https://github.com/nodejs/node/pull/5509)
