--- a/locale/en/blog/release/v4.3.2.md
+++ b/locale/en/blog/release/v4.3.2.md
@@ -20,19 +20,22 @@ author: Myles Borins
 * [[`c133797d09`](https://github.com/nodejs/node/commit/c133797d09)] - **deps**: upgrade openssl to 1.0.2g (Ben Noordhuis) [#5507](https://github.com/nodejs/node/pull/5507)
 
 
+
+
 Windows 32-bit Installer: https://nodejs.org/dist/v4.3.2/node-v4.3.2-x86.msi<br>
 Windows 64-bit Installer: https://nodejs.org/dist/v4.3.2/node-v4.3.2-x64.msi<br>
 Windows 32-bit Binary: https://nodejs.org/dist/v4.3.2/win-x86/node.exe<br>
 Windows 64-bit Binary: https://nodejs.org/dist/v4.3.2/win-x64/node.exe<br>
 Mac OS X 64-bit Installer: https://nodejs.org/dist/v4.3.2/node-v4.3.2.pkg<br>
 Mac OS X 64-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-darwin-x64.tar.gz<br>
-Linux 32-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-x86.tar.gz<br>
-Linux 64-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-x64.tar.gz<br>
-SunOS 32-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-sunos-x86.tar.gz<br>
-SunOS 64-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-sunos-x64.tar.gz<br>
-ARMv6 32-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-armv6l.tar.gz<br>
-ARMv7 32-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-armv7l.tar.gz<br>
-ARMv8 64-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-arm64.tar.gz<br>
+Linux 32-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-x86.tar.xz<br>
+Linux 64-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-x64.tar.xz<br>
+Linux PPC LE 64-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-ppc64le.tar.xz<br>
+SunOS 32-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-sunos-x86.tar.xz<br>
+SunOS 64-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-sunos-x64.tar.xz<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-armv6l.tar.xz<br>
+ARMv7 32-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-armv7l.tar.xz<br>
+ARMv8 64-bit Binary: https://nodejs.org/dist/v4.3.2/node-v4.3.2-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v4.3.2/node-v4.3.2.tar.gz<br>
 Other release files: https://nodejs.org/dist/v4.3.2/<br>
 Documentation: https://nodejs.org/docs/v4.3.2/api/
