Nightly downloads added - Issue #510

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -9,6 +9,7 @@
     "getHelpIssue": "Get Help",
     "by": "by",
     "all-downloads": "All download options",
+    "nightly": "Nightly builds",
     "feeds": [
         {
             "link": "feed/blog.xml",
