blog: fix typo in release post for v4.4.0
buld → build

--- a/locale/en/blog/release/v4.4.0.md
+++ b/locale/en/blog/release/v4.4.0.md
@@ -24,7 +24,7 @@ The SEMVER-MINOR changes include:
 
 Notable semver patch changes include:
 
-  * **buld**:
+  * **build**:
     - Support python path that includes spaces. This should be of particular interest to our Windows users who may have python living in `c:/Program Files` (Felix Becker) [#4841](https://github.com/nodejs/node/pull/4841)
   * **https**:
     - A potential fix for [#3692](https://github.com/nodejs/node/issues/3692) HTTP/HTTPS client requests throwing EPROTO (Fedor Indutny) [#4982](https://github.com/nodejs/node/pull/4982)
