Adding survey report and announcement. (#648)

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -103,7 +103,7 @@
         "text": "Foundation",
         "casestudies": {
             "link": "foundation/case-studies",
-            "text": "Case Studies"
+            "text": "Resources"
         },
         "members": {
             "link": "foundation/members",
