Rename 'Stable' release to 'Current' (#672)
* Rename 'Stable' release to 'Current'

* build: Fix crash when changing files during serve

* Rename 'Stable' release to 'Current': old releases also renamed

* Rename 'Stable' release to 'Current': Update Korean translation

* Rename 'Stable' release to 'Current': Update v4.x/5.x release posts

* Rename 'Stable' release to 'Current': Update weekly update posts

--- a/locale/ko/site.json
+++ b/locale/ko/site.json
@@ -81,7 +81,7 @@
             "subtext": "LTS",
             "text": "v4.4.3 API"
         },
-        "api-stable": {
+        "api-current": {
             "link": "/dist/latest-v5.x/docs/api",
             "text": "v5.11.0 API"
         },
