--- a/locale/en/blog/release/v4.0.0.md
+++ b/locale/en/blog/release/v4.0.0.md
@@ -2,7 +2,7 @@
 date: 2015-09-08T12:10:06.000Z
 version: 4.0.0
 category: release
-title: Node v4.0.0 (Stable)
+title: Node v4.0.0 (Current)
 slug: node-v4-0-0-stable
 layout: blog-post.hbs
 ---
