--- a/locale/en/blog/release/v4.1.0.md
+++ b/locale/en/blog/release/v4.1.0.md
@@ -2,12 +2,12 @@
 date: 2015-09-17T05:30:00.969Z
 version: 4.1.0
 category: release
-title: Node v4.1.0 (Stable)
+title: Node v4.1.0 (Current)
 slug: node-v4-1-0-stable
 layout: blog-post.hbs
 ---
 
-## 2015-09-17, Version 4.1.0 (Stable), @Fishrock123
+## 2015-09-17, Version 4.1.0 (Current), @Fishrock123
 
 ### Notable changes
 
@@ -36,7 +36,7 @@ See https://github.com/nodejs/node/labels/confirmed-bug for complete and current
 ### Commits
 
 * [[`b1abe812cd`](https://github.com/nodejs/node/commit/b1abe812cd)] - Working on 4.0.1 (Rod Vagg)
-* [[`f9f8378853`](https://github.com/nodejs/node/commit/f9f8378853)] - 2015-09-08, Version 4.0.0 (Stable) Release (Rod Vagg)
+* [[`f9f8378853`](https://github.com/nodejs/node/commit/f9f8378853)] - 2015-09-08, Version 4.0.0 (Current) Release (Rod Vagg)
 * [[`9683e5df51`](https://github.com/nodejs/node/commit/9683e5df51)] - **bindings**: close after reading module struct (Fedor Indutny) [#2792](https://github.com/nodejs/node/pull/2792)
 * [[`4b4cfa2d44`](https://github.com/nodejs/node/commit/4b4cfa2d44)] - **buffer**: always allocate typed arrays outside heap (Trevor Norris) [#2893](https://github.com/nodejs/node/pull/2893)
 * [[`7df018a29b`](https://github.com/nodejs/node/commit/7df018a29b)] - **buffer**: construct Uint8Array in JS (Trevor Norris) [#2866](https://github.com/nodejs/node/pull/2866)
