--- a/locale/en/blog/release/v4.1.2.md
+++ b/locale/en/blog/release/v4.1.2.md
@@ -2,12 +2,12 @@
 date: 2015-10-05T20:05:01.925Z
 version: 4.1.2
 category: release
-title: Node v4.1.2 (Stable)
+title: Node v4.1.2 (Current)
 slug: node-v4-1-2-stable
 layout: blog-post.hbs
 ---
 
-## 2015-10-05, Version 4.1.2 (Stable), @rvagg
+## 2015-10-05, Version 4.1.2 (Current), @rvagg
 
 This release includes a fix for [CVE-2015-7384](https://github.com/nodejs/node/issues/3138), a Denial of Service (DoS) bug. Details of the bug can be found on the [nodejs-sec](https://groups.google.com/forum/#!topic/nodejs-sec/fSNEQiuof6I) group. Please subscribe to [nodejs-sec](https://groups.google.com/forum/#!forum/nodejs-sec) to receive future notifications of security releases.
 
