--- a/locale/en/blog/release/v5.3.0.md
+++ b/locale/en/blog/release/v5.3.0.md
@@ -2,7 +2,7 @@
 date: 2015-12-16T20:23:07.363Z
 version: 5.3.0
 category: release
-title: Node v5.3.0 (Stable)
+title: Node v5.3.0 (Current)
 slug: node-v5-3-0
 layout: blog-post.hbs
 author: Colin Ihrig
@@ -31,7 +31,7 @@ author: Colin Ihrig
 
 ### Commits
 
-* [[`6ca5ea3860`](https://github.com/nodejs/node/commit/6ca5ea3860)] - 2015-12-09, Version 5.2.0 (Stable) (Rod Vagg) [#4181](https://github.com/nodejs/node/pull/4181)
+* [[`6ca5ea3860`](https://github.com/nodejs/node/commit/6ca5ea3860)] - 2015-12-09, Version 5.2.0 (Current) (Rod Vagg) [#4181](https://github.com/nodejs/node/pull/4181)
 * [[`da5cdc2207`](https://github.com/nodejs/node/commit/da5cdc2207)] - **assert**: accommodate ES6 classes that extend Error (Rich Trott) [#4166](https://github.com/nodejs/node/pull/4166)
 * [[`67e181986a`](https://github.com/nodejs/node/commit/67e181986a)] - **(SEMVER-MINOR)** **buffer**: add includes() for parity with TypedArray (Alexander Martin) [#3567](https://github.com/nodejs/node/pull/3567)
 * [[`84dea1bd0c`](https://github.com/nodejs/node/commit/84dea1bd0c)] - **configure**: fix arm vfpv2 (Jörg Krause) [#4203](https://github.com/nodejs/node/pull/4203)
