--- a/locale/en/blog/release/v4.1.1.md
+++ b/locale/en/blog/release/v4.1.1.md
@@ -2,7 +2,7 @@
 date: 2015-09-23T02:01:38.545Z
 version: 4.1.1
 category: release
-title: Node v4.1.1 (Stable)
+title: Node v4.1.1 (Current)
 slug: node-v4-1-1-stable
 layout: blog-post.hbs
 author: Rod Vagg
