--- a/locale/en/blog/release/v5.0.0.md
+++ b/locale/en/blog/release/v5.0.0.md
@@ -2,7 +2,7 @@
 date: 2015-10-29T12:33:38.068Z
 version: 5.0.0
 category: release
-title: Node v5.0.0 (Stable)
+title: Node v5.0.0 (Current)
 slug: node-v5-0-0
 layout: blog-post.hbs
 author: Rod Vagg
