--- a/locale/en/blog/release/v5.1.1.md
+++ b/locale/en/blog/release/v5.1.1.md
@@ -2,7 +2,7 @@
 date: 2015-12-04T03:04:00.000Z
 version: 5.1.1
 category: release
-title: Node v5.1.1 (Stable)
+title: Node v5.1.1 (Current)
 slug: node-v5-1-1
 layout: blog-post.hbs
 author: Rod Vagg
