--- a/locale/en/blog/release/v5.10.1.md
+++ b/locale/en/blog/release/v5.10.1.md
@@ -2,7 +2,7 @@
 date: 2016-04-05T23:33:44.892Z
 version: 5.10.1
 category: release
-title: Node v5.10.1 (Stable)
+title: Node v5.10.1 (Current)
 slug: node-v5-10-1
 layout: blog-post.hbs
 author: Myles Borins
