--- a/locale/en/blog/release/v5.2.0.md
+++ b/locale/en/blog/release/v5.2.0.md
@@ -2,7 +2,7 @@
 date: 2015-12-09T05:24:54.976Z
 version: 5.2.0
 category: release
-title: Node v5.2.0 (Stable)
+title: Node v5.2.0 (Current)
 slug: node-v5-2-0
 layout: blog-post.hbs
 author: Rod Vagg
