--- a/locale/en/blog/release/v5.4.1.md
+++ b/locale/en/blog/release/v5.4.1.md
@@ -2,7 +2,7 @@
 date: 2016-01-12T23:59:28.459Z
 version: 5.4.1
 category: release
-title: Node v5.4.1 (Stable)
+title: Node v5.4.1 (Current)
 slug: node-v5-4-1
 layout: blog-post.hbs
 author: Myles Borins
