--- a/locale/en/blog/release/v5.5.0.md
+++ b/locale/en/blog/release/v5.5.0.md
@@ -2,7 +2,7 @@
 date: 2016-01-21T02:26:55.519Z
 version: 5.5.0
 category: release
-title: Node v5.5.0 (Stable)
+title: Node v5.5.0 (Current)
 slug: node-v5-5-0
 layout: blog-post.hbs
 author: Evan Lucas
