--- a/locale/en/blog/release/v5.7.0.md
+++ b/locale/en/blog/release/v5.7.0.md
@@ -2,7 +2,7 @@
 date: 2016-02-23T05:37:34.766Z
 version: 5.7.0
 category: release
-title: Node v5.7.0 (Stable)
+title: Node v5.7.0 (Current)
 slug: node-v5-7-0
 layout: blog-post.hbs
 author: Rod Vagg
