--- a/locale/en/blog/release/v5.7.1.md
+++ b/locale/en/blog/release/v5.7.1.md
@@ -2,7 +2,7 @@
 date: 2016-03-02T23:23:06.216Z
 version: 5.7.1
 category: release
-title: Node v5.7.1 (Stable)
+title: Node v5.7.1 (Current)
 slug: node-v5-7-1
 layout: blog-post.hbs
 author: Jeremiah Senkpiel
