--- a/locale/en/blog/release/v5.8.0.md
+++ b/locale/en/blog/release/v5.8.0.md
@@ -2,7 +2,7 @@
 date: 2016-03-09T15:57:36.574Z
 version: 5.8.0
 category: release
-title: Node v5.8.0 (Stable)
+title: Node v5.8.0 (Current)
 slug: node-v5-8-0
 layout: blog-post.hbs
 author: Jeremiah Senkpiel
