--- a/locale/en/blog/release/v5.9.0.md
+++ b/locale/en/blog/release/v5.9.0.md
@@ -2,7 +2,7 @@
 date: 2016-03-16T21:34:26.150Z
 version: 5.9.0
 category: release
-title: Node v5.9.0 (Stable)
+title: Node v5.9.0 (Current)
 slug: node-v5-9-0
 layout: blog-post.hbs
 author: Evan Lucas
