--- a/locale/en/blog/release/v5.9.1.md
+++ b/locale/en/blog/release/v5.9.1.md
@@ -2,7 +2,7 @@
 date: 2016-03-23T17:40:02.432Z
 version: 5.9.1
 category: release
-title: Node v5.9.1 (Stable)
+title: Node v5.9.1 (Current)
 slug: node-v5-9-1
 layout: blog-post.hbs
 author: Jeremiah Senkpiel
