--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -78,7 +78,7 @@
         "text": "Docs",
         "es6": {
             "link": "docs/es6",
-            "text": "ES6 in Node.js"
+            "text": "ES6 and beyond"
         },
         "faq": {
             "link": "docs/faq",
