--- a/locale/en/blog/release/v5.11.1.md
+++ b/locale/en/blog/release/v5.11.1.md
@@ -8,7 +8,7 @@ layout: blog-post.hbs
 author: Evan Lucas
 ---
 
-Please see our [blog post](nodejs.org/en/blog/vulnerability/openssl-may-2016) for more info on the security contents of this release.
+Please see our [blog post](https://nodejs.org/en/blog/vulnerability/openssl-may-2016) for more info on the security contents of this release.
 
 ### Notable changes
 
