blog: update v6.1.0 with armv6

--- a/locale/en/blog/release/v6.1.0.md
+++ b/locale/en/blog/release/v6.1.0.md
@@ -102,7 +102,7 @@ Linux 64-bit Binary: https://nodejs.org/dist/v6.1.0/node-v6.1.0-linux-x64.tar.xz
 Linux PPC LE 64-bit Binary: https://nodejs.org/dist/v6.1.0/node-v6.1.0-linux-ppc64le.tar.xz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v6.1.0/node-v6.1.0-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v6.1.0/node-v6.1.0-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v6.1.0/node-v6.1.0-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v6.1.0/node-v6.1.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v6.1.0/node-v6.1.0-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v6.1.0/node-v6.1.0.tar.gz<br>
@@ -120,6 +120,8 @@ a599974633ffbc8a3964699080d4f369297198eac4e18a990f801a6b42b742e6  node-v6.1.0-da
 8e35bf983def6f7bc321fbabcd3bf5e7909e30417cb9c43f31171a63cf664b10  node-v6.1.0-headers.tar.xz
 87670387877d1cbe36642970e3ca84a77121d3200771b80ec2286bc261e060f7  node-v6.1.0-linux-arm64.tar.gz
 7fde2a7b2b7d96d14d3f3f655474434af38583b471973ba3ff07ae29a1f0d821  node-v6.1.0-linux-arm64.tar.xz
+aeff5e4b77fba25feb19ec4739116373234e93aff0d2c9662c4ebd87fa4b34ae  node-v6.1.0-linux-armv6l.tar.gz
+856120ca6e03501c29fadced18f737487092ad75845247e8e2feea30b97f53c9  node-v6.1.0-linux-armv6l.tar.xz
 55d7a2e5071b13db6fe5d952dc5ee5d2223ae4a0de2f2c2d7a68d65e1cfa377b  node-v6.1.0-linux-armv7l.tar.gz
 ee9583ee94c602b63d758edb564e944a24d4cadac38bde95b25e4995362297e8  node-v6.1.0-linux-armv7l.tar.xz
 bca98e8a4f5c11dee9eb4fec2bd0a42c1f8a921863bba417fc88c7274a0c0c04  node-v6.1.0-linux-ppc64le.tar.gz
@@ -144,19 +146,19 @@ a6391706a5ac17bcf9f8ff5fb9c0359b6787dcfd45a6089f91d36edb49738c69  win-x86/node.e
 -----BEGIN PGP SIGNATURE-----
 Comment: GPGTools - https://gpgtools.org
 
-iQIcBAEBCgAGBQJXK9GUAAoJEEX17r2BPa6OzWoP/32K0Fprtt+v+reV3gvw4WnY
-2pOF2T+Grlwm5PxqeiOoOByROkQz3qIwbjxOrAe4N3rRaGtHQGLRXJoz0XJriTfk
-3516zZL7AkL79c4Hs6kywHnXsDlkRC3FpP9rsGxhTwMwURPC2DnvnB/rET11d1vX
-F6ttmFNAr2IhsmEvTASCu5epT1gcgMTh2shTLLyZdLJ/N2/sQSLqPYYV4WqI55b1
-56eqF3ieWVPjDg++DV5VNhzm11PWskrnwbPOljV1TLrrUBo0653yVgc27rF7Lr5M
-Qr32N8hOVmXGwYAJb+Hr7iEJnWkc03TRhMZht84CmlFeZlcDx7RnsIW/PJoUpm6Z
-ViakXOexIgsfw77kZfjIvBEkGueSxK/NiGycQ41zkh+v2x6/5OIgLy8qQeTF0Mkn
-2iRm3rfpSjaXHcqNEgMSaoTRPwI82C9NCuFYG6dgDIZqGXKVaswdfHN7qRCgSsQC
-e0d0TM1L6aaEzKGFmmp5ehlsX3XMCFk1JCf72NanOtdMKfAnBp4YJb6G+K3i9oLn
-Sm8AyKAffUenxLmX4xHvLv50oyGcGEV/SjhZO1KnN7iWI/8b3C1n5Lz0zmArLnqB
-lj/hxfYo33hJzHjhPiPkseHnWhO+a6rPZOVDSHoS1Gjmm1G/WYbmCDtjfGPpNE3o
-mcixAmHl+EMFWRDHvCvJ
-=dSCp
+iQIcBAEBCgAGBQJXLLHaAAoJEEX17r2BPa6O3C4P+wXrjmby0cm/K1HLpmCtitMu
+4aMpt1/MlVVZjlCrm/vtvt56L7KznU0BgMq0DjJDvmWuWOs6wwWHj9SF69BvsHXV
+A9tKuVHSKq/S9dFqv+Ucz3L+ITYCZSpZubKCfUbRPvCMTl4Aw1lF+JwCzpiB9GCx
+kxJdN+HVuHJonmcSku1V/lP/zSylkHWGC4YvRwmRcZMIPedTfvYtIWHzRXIpMwjN
+WD2BSiHGqqh0U2KFe+drwrZZEYjLfS0urwgIsdnS+BIfDATaMyP5W++iKZ1G9QvD
+bbi+Lyye9jnJNhJvFUHA5df33jn3avfBMFgsToFqWw+nmLTrJyco+kaEBSSnhD5l
+sl1S/Vc7jrZgX1Hz4iiPM8t6c8h1hH/eck5HuqQcP114x/EP3LPlKGdy3MRZcvWO
+VCrI9A3zQitbmiwNC1kml6S50/XrRJL/bLrBPqlg2p42t/LMsq6KKfUDzE9ibooR
+O7gxMd6Bk4B2R8RQtF0uQ6X/KQK4U65RKRjgQznMK+eQfJ/z4D1i1lr2APp8QwiS
+UXMG4zLnJThb7G6z1Z2HtS5RL+0LuOaFj5MH4ft7PTAhvaVybGeGb+qv5s2Hhva/
+RAvkB/wyx/3uCLAJDfDYSH+lFu9hak0+eLY59Qv9hVziTqIOXSTuxiumVAu/gWhS
+MWdeZRgt8pObdLGV1eaW
+=/0Ti
 -----END PGP SIGNATURE-----
 
 ```
