Adding shasum links for release files to download page (#819)

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -71,6 +71,10 @@
         "package-manager": {
             "link": "download/package-manager",
             "text": "Installing Node.js via package manager"
+        },
+        "shasums":{
+          "link": "SHASUMS256.txt.asc",
+          "text": "Signed SHASUMS for release files"
         }
     },
     "docs": {
