translate "download" menu as Korean (#857)

--- a/locale/ko/site.json
+++ b/locale/ko/site.json
@@ -82,7 +82,7 @@
         "text": "문서",
         "es6": {
             "link": "docs/es6",
-            "text": "ES6 and beyond"
+            "text": "ES6와 그 이후"
         },
         "faq": {
             "link": "docs/faq",
