Improve Japanese translation on front page (#916)

--- a/locale/ja/site.json
+++ b/locale/ja/site.json
@@ -6,7 +6,7 @@
     "scrollToTop": "上部へスクロールする",
     "reportNodeIssue": "Node.js の不具合を報告",
     "reportWebsiteIssue": "サイトの不具合を報告",
-    "getHelpIssue": "サポート",
+    "getHelpIssue": "ヘルプ",
     "by": "by",
     "all-downloads": "All download options",
     "nightly": "Nightly builds",
