update shasums and sig for v4.6.0

--- a/locale/en/blog/release/v4.6.0.md
+++ b/locale/en/blog/release/v4.6.0.md
@@ -75,8 +75,8 @@ Hash: SHA1
 862ce573bcfd592ea0c24861c0097bd23ca842d263e03f5dfa1ce08be888f20f  node-v4.6.0-headers.tar.xz
 bf03e7384b727bc80c0c59cf38ba5704d83faa7f455f40fa62a67c8331dde7d6  node-v4.6.0-linux-arm64.tar.gz
 7683e664b648c4ec3f86935f4b4f9fbf56f19d171e1e29d5adf687fc4c392b5b  node-v4.6.0-linux-arm64.tar.xz
-38421ca90547b28427674fd0f158586af515c0107c28aa813ab560348f07afdf  node-v4.6.0-linux-armv6l.tar.gz
-25b7df0af0dbf13cb646a7062b8d3c05a466ff154718f41e15565add2336c60c  node-v4.6.0-linux-armv6l.tar.xz
+e7db1c612eb9dd55e3ff246bfa7c35f0b87664e6e2bc7b32891de8cc1e48f5a7  node-v4.6.0-linux-armv6l.tar.gz
+766d10a73886bbe1a3abd4b78563a825408cab7e116e590f1bbdc9b88cc3aa09  node-v4.6.0-linux-armv6l.tar.xz
 9e46082bef5b521afd483532c8d3715f33d1d4302b7980b904bea3182817275f  node-v4.6.0-linux-armv7l.tar.gz
 def976771b4a2a4488b87a06c8295ffea55671f7f42df13e3718341d28bf2d40  node-v4.6.0-linux-armv7l.tar.xz
 2aa9518ea637cc06877a01c40d4608cf9a7f1588000cf3e550e4ab24c170aee6  node-v4.6.0-linux-ppc64le.tar.gz
@@ -110,13 +110,13 @@ b92e5e5031f19f201ec4568d7761c263af9a20e02b34bdd9e5f7191750aee3fb  win-x64/node_p
 0d0faf3bf0fcf50a943d8202d24d8eb8bb0695ea99498360c1a8a745c7811fd7  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBAgAGBQJX6w24AAoJEMJzeS99g1RdLycIANKIji9MrtyJ1l/6hlIN41i1
-je0PMy53mlNpECVI+2h3YyhnqAJ5ssV8/FpKzEg68CgtthEdFUbLDOsocsJQrxWx
-ScfTcb+f82gvuTZOb0FDPvqtp0zqWRYrdi2CHmsdNAL5bR0DQ29Q5KmyEEl6hvX/
-M61nnHugmT0b3Ml6diL83N2QPxQY8+a7hbmCYphMeGPDKRXReAqwP/GQ5UO3BVNZ
-19JlQ0cI9mDrFq1crBkog+IHsZoidQw2Tmi3CfTwqtYgS4j3Ph0mMVcWzDHQugHA
-eSBh7Pvvgc/0/+nhPcvDAOtdaETCR6n2kq96NSGXaSs1yaLm/ox7NcDP8x9XjaA=
-=0rzw
+iQEcBAEBAgAGBQJX6xhwAAoJEMJzeS99g1RdoksH/139ljOj+Vjc0nVNRn5m2KxC
+3gldiKMaNBeefV9JOA3tG1fei3KPvO/PRHVCYogQO8IEEpJ5Yer+zQpsLOg/xGDR
+nsg9xOBupnSlUAfALilWhkDkBDgcauuiII3tP98GjDaSS+cH6Pctt08l2XTCROYk
+YThc0nonmobDGSsHVf4biv+ySMocmpZGU0h10xS2lRVlrxMpEzsxVuCSv52fRDKy
+gD0Hf9ZSFi9i1MIxKOIolYpdIVmrS29c6J0LbjW2WcTk21jIOENXEk1uEl71OWHD
+plT4hauehu/3a89FcqsOu10MqLStFuEm0T1CXtmn4/Vm2FhJnZfdiCDT1YABD00=
+=LyAk
 -----END PGP SIGNATURE-----
 
 ```
