Add Education initiatives and Outreachy to Foundation section of website (#929)
* update signup form

* add education and outreachy under Foundation

* add education initiative copy

* add outreachy copy

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -128,6 +128,14 @@
         "announce": {
             "link": "foundation/announcements",
             "text": "Announcements"
+        },
+        "education": {
+            "link": "foundation/education",
+            "text": "Education Initiatives"
+        },
+        "outreachy": {
+            "link": "foundation/outreachy",
+            "text": "Outreachy + Node.js"
         }
     },
     "getinvolved": {
