nodejs-ja: Add about/index.md (#933)
thx @yosuke-furukawa and @tgfjt, @abouthiroppy

--- a/locale/ja/site.json
+++ b/locale/ja/site.json
@@ -31,7 +31,7 @@
     "home": { "text": "ホーム" },
     "about": {
         "link": "about",
-        "text": "アバウト",
+        "text": "Node.js とは",
         "governance": {
             "link": "about/governance",
             "text": "委員会"
