--- a/locale/en/blog/release/v6.8.0.md
+++ b/locale/en/blog/release/v6.8.0.md
@@ -11,8 +11,7 @@ author: Jeremiah Senkpiel
 ### Notable changes
 
 * **fs**:
-  - `SyncWriteStream` now inherits from `Stream.Writable`. (Anna Henningsen) [#8830](https://github.com/nodejs/node/pull/8830)
-    - Practically, this means that when stdio is piped to a file, stdout and stderr will still be `Writable` streams.
+  - `SyncWriteStream` now inherits from `Stream.Writable`. (Anna Henningsen) [#8830](https://github.com/nodejs/node/pull/8830) <br>Practically, this means that when stdio is piped to a file, stdout and stderr will still be `Writable` streams.
   - `fs.existsSync()` has been undeprecated. `fs.exists()` remains deprecated. (Dan Fabulich) [#8364](https://github.com/nodejs/node/pull/8364)
 * **http**: `http.request()` now accepts a `timeout` option. (Rene Weber) [#8101](https://github.com/nodejs/node/pull/8101)
 * **module**: The module loader now maintains its own realpath cache. (Anna Henningsen) [#8100](https://github.com/nodejs/node/pull/8100)
