docs: dynamical URLs in API docs navigation links.
Previously the API docs navigation links displayed on to the left on
/:language/docs/ had `v4.x` and `v6.x` hardcoded in their URL.

These changes fixes that by using the actual LTS/current major versions
based on the https://nodejs.org/download/release/index.json.

--- a/locale/ja/site.json
+++ b/locale/ja/site.json
@@ -81,12 +81,12 @@
             "text": "よくある質問"
         },
         "api-lts": {
-            "link": "/dist/latest-v4.x/docs/api",
+            "link": "/dist/latest-%ver-major%/docs/api",
             "subtext": "LTS",
             "text": "%ver% API"
         },
         "api-current": {
-            "link": "/dist/latest-v6.x/docs/api",
+            "link": "/dist/latest-%ver-major%/docs/api",
             "text": "%ver% API"
         },
         "guides": {
