fix markdown in blog post v7.0.0 (#994)

--- a/locale/en/blog/release/v7.0.0.md
+++ b/locale/en/blog/release/v7.0.0.md
@@ -16,7 +16,7 @@ As an odd numbered release, in accordance with our [Long Term Support plan](http
 
 The general rule for deciding which version of Node.js to use is:
 
-* Stay on Node.js v4 or upgrade to Node.js v6 if you need *stability and have a complex production environment, e.g. you are a medium or large enterprise.
+* Stay on Node.js v4 or upgrade to Node.js v6 if you need *stability* and have a complex production environment, e.g. you are a medium or large enterprise.
 * Upgrade to Node.js v7 if you have the ability to upgrade versions quickly and easily without disrupting your environment and want to play with the latest features as they arrive.
 
 The release notes below are annotated with the main breaking changes. Note that because this new version of Node.js is shipping with a new version of V8, existing native addons will need to be recompiled or runtime errors will occur when trying to load them. Use `npm rebuild` or simply remove your `node_modules` and `npm install` from scratch.
