Add link to Node-ChakraCore nightlies (#1027)

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -10,6 +10,7 @@
     "by": "by",
     "all-downloads": "All download options",
     "nightly": "Nightly builds",
+    "chakracore-nightly": "Node-ChakraCore Nightly builds",
     "feeds": [
         {
             "link": "feed/blog.xml",
