--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -52,6 +52,10 @@
         "trademark": {
             "link": "about/trademark",
             "text": "Trademark"
+        },
+        "privacy": {
+            "link": "about/privacy",
+            "text": "Privacy Policy"
         }
     },
     "download": {
